"rscli auto-commit"
