# internal/storage/pg/queries/config_queries/models.go
@@ -1,72 +1,0 @@
-// Code generated by sqlc. DO NOT EDIT.
-// versions:
-//   sqlc v1.30.0
-
-package config_queries
-
-import (
-	"database/sql"
-	"database/sql/driver"
-	"fmt"
-	"time"
-)
-
-type MatreshkaConfigType string
-
-const (
-	MatreshkaConfigTypePlain MatreshkaConfigType = "plain"
-	MatreshkaConfigTypeVerv  MatreshkaConfigType = "verv"
-	MatreshkaConfigTypeMinio MatreshkaConfigType = "minio"
-	MatreshkaConfigTypePg    MatreshkaConfigType = "pg"
-	MatreshkaConfigTypeNginx MatreshkaConfigType = "nginx"
-	MatreshkaConfigTypeKv    MatreshkaConfigType = "kv"
-)
-
-func (e *MatreshkaConfigType) Scan(src interface{}) error {
-	switch s := src.(type) {
-	case []byte:
-		*e = MatreshkaConfigType(s)
-	case string:
-		*e = MatreshkaConfigType(s)
-	default:
-		return fmt.Errorf("unsupported scan type for MatreshkaConfigType: %T", src)
-	}
-	return nil
-}
-
-type NullMatreshkaConfigType struct {
-	MatreshkaConfigType MatreshkaConfigType
-	Valid               bool // Valid is true if MatreshkaConfigType is not NULL
-}
-
-// Scan implements the Scanner interface.
-func (ns *NullMatreshkaConfigType) Scan(value interface{}) error {
-	if value == nil {
-		ns.MatreshkaConfigType, ns.Valid = "", false
-		return nil
-	}
-	ns.Valid = true
-	return ns.MatreshkaConfigType.Scan(value)
-}
-
-// Value implements the driver Valuer interface.
-func (ns NullMatreshkaConfigType) Value() (driver.Value, error) {
-	if !ns.Valid {
-		return nil, nil
-	}
-	return string(ns.MatreshkaConfigType), nil
-}
-
-type MatreshkaConfig struct {
-	ID        int32
-	Name      string
-	Type      MatreshkaConfigType
-	CreatedAt time.Time
-	UpdatedAt time.Time
-}
-
-type MatreshkaConfigsContent struct {
-	ConfigID sql.NullInt32
-	Version  string
-	Content  string
-}
