# pkg/docs/swaggers/matreshka_api.swagger.json
@@ -312,12 +312,12 @@
     },
     "/api/version": {
       "get": {
-        "operationId": "MatreshkaApi_ApiVersion",
+        "operationId": "MatreshkaApi_Version",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/matreshka_apiApiVersionResponse"
+              "$ref": "#/definitions/matreshka_apiVersionResponse"
             }
           },
           "default": {
@@ -334,32 +334,7 @@
     }
   },
   "definitions": {
-    "PatchConfigPatch": {
-      "type": "object",
-      "properties": {
-        "fieldName": {
-          "type": "string"
-        },
-        "rename": {
-          "type": "string"
-        },
-        "updateValue": {
-          "type": "string"
-        },
-        "delete": {
-          "type": "boolean"
-        }
-      }
-    },
-    "matreshka_apiApiVersionResponse": {
-      "type": "object",
-      "properties": {
-        "version": {
-          "type": "string"
-        }
-      }
-    },
-    "matreshka_apiConfig": {
+    "matreshka_apiConfigBase": {
       "type": "object",
       "properties": {
         "id": {
@@ -369,13 +344,13 @@
         "name": {
           "type": "string"
         },
-        "createdAtUtcTimestamp": {
+        "createdAt": {
           "type": "string",
-          "format": "int64"
+          "format": "date-time"
         },
-        "updatedAtUtcTimestamp": {
+        "updatedAt": {
           "type": "string",
-          "format": "int64"
+          "format": "date-time"
         },
         "versions": {
           "type": "array",
@@ -464,11 +439,11 @@
         "paging": {
           "$ref": "#/definitions/matreshka_apiPaging"
         },
-        "searchPattern": {
-          "type": "string"
-        },
         "sort": {
           "$ref": "#/definitions/matreshka_apiSort"
+        },
+        "searchPattern": {
+          "type": "string"
         }
       }
     },
@@ -479,7 +454,7 @@
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/matreshka_apiConfig"
+            "$ref": "#/definitions/matreshka_apiConfigBase"
           }
         },
         "totalRecords": {
@@ -506,7 +481,7 @@
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/PatchConfigPatch"
+            "$ref": "#/definitions/matreshka_apiPatch"
           }
         }
       }
@@ -558,6 +533,23 @@
         }
       }
     },
+    "matreshka_apiPatch": {
+      "type": "object",
+      "properties": {
+        "fieldName": {
+          "type": "string"
+        },
+        "rename": {
+          "type": "string"
+        },
+        "updateValue": {
+          "type": "string"
+        },
+        "delete": {
+          "type": "boolean"
+        }
+      }
+    },
     "matreshka_apiPatchConfigResponse": {
       "type": "object"
     },
@@ -591,6 +583,14 @@
     },
     "matreshka_apiStoreConfigResponse": {
       "type": "object"
+    },
+    "matreshka_apiVersionResponse": {
+      "type": "object",
+      "properties": {
+        "version": {
+          "type": "string"
+        }
+      }
     },
     "protobufAny": {
       "type": "object",
